ros2_ws/log/build_2023-06-26_16-49-56/kalbot_controller/stderr.log
  File "/home/alibaba/ros2_repos/install/kalbot_controller/lib/python3.6/site-packages/kalbot_controller/kalbot_controller.py", line 32
    msg = (self._command.left_motor_speed),self._command.right_motor_speed)
                                                                          ^
SyntaxError: invalid syntax

